# glyphbox

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  README.md  SPEC.md  alembic.ini  dev.sh  docker-compose.prod.yml  docker-compose.yml  kill_tui.sh  nginx.conf  pyproject.toml  run_tui.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_user_auth_fields.py  003_add_inventory_dungeon_overview.py  004_add_llm_finish_reason.py  005_public_runs_unique_usernames.py  006_add_game_screen_colors.py
config/: default.yaml
docker/: Dockerfile  api_stub.py  entrypoint.sh  run_skill.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/: ModelSelect.tsx
frontend/src/hooks/: useAuth.tsx  useKeyboardShortcuts.ts  useLiveStream.ts  useModels.ts  useRun.ts  useRuns.ts  useTurnNavigation.ts  useTurns.ts
frontend/src/pages/: FeaturedPage.tsx  LeaderboardPage.tsx  NewRunPage.tsx  RunListPage.tsx  RunViewerPage.tsx  UserProfilePage.tsx
frontend/src/types/: api.ts
frontend/src/utils/: nethackColors.ts
prompts/: system.txt
scripts/: init-test-db.sql  test_llm.py  verify_setup.py
skills/: SKILL.md
skills/_disabled/combat/: melee_fight.py
skills/_disabled/exploration/: move_to.py
skills/_disabled/resource/: eat_when_hungry.py
skills/exploration/: cautious_explore.py.disabled  look_around.py
src/: __init__.py  cli.py  config.py
src/agent/: __init__.py  agent.py  llm_client.py  parser.py  prompts.py  skill_synthesis.py
src/api/: __init__.py  actions.py  environment.py  glyphs.py  knowledge.py  models.py  nethack_api.py  pathfinding.py  queries.py
src/memory/: __init__.py  dungeon.py  episode.py  manager.py  schema.sql  working.py
src/persistence/: __init__.py  models.py  postgres.py  tables.py
src/sandbox/: __init__.py  exceptions.py  manager.py  proxy.py  validation.py
src/skills/: __init__.py  executor.py  library.py  models.py  statistics.py
src/tui/: __init__.py  app.py  events.py  logging.py  runner.py
src/tui/widgets/: __init__.py  controls.py  decision_log.py  game_screen.py  (+2 more)
src/web/: __init__.py  agent_factory.py  app.py  auth.py  deps.py  procrastinate_backend.py  routes.py  run_config.py  run_manager.py  runner.py  ws.py
src/worker/: app.py  tasks.py
tests/: __init__.py  conftest.py  test_actions.py  test_agent_agent.py  test_agent_parser.py  test_agent_prompts.py  test_agent_skill_synthesis.py  test_auth.py  test_autoexplore.py  test_autoexplore_minihack.py  test_glyphs.py  test_memory_dungeon.py  test_memory_episode.py  test_memory_manager.py  test_memory_working.py  test_models.py  test_nethack_api.py  test_pathfinding.py  test_persistence.py  test_procrastinate_backend.py  test_queries.py  test_run_config.py  test_run_manager.py  test_sandbox_manager.py  test_sandbox_validation.py  test_skill_cautious_explore.py.disabled  test_skill_library.py  test_skill_look_around.py  test_skill_models.py  test_skill_statistics.py
tests/test_tui/: test_events.py  test_integration.py  test_widgets.py
(+18 files in other folders)
