[project]
name = "nethack-agent"
version = "0.1.0"
description = "A self-programming NetHack agent that dynamically generates behavioral skills through code synthesis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kenny Bergquist" }]

dependencies = [
    "nle>=1.0.0",
    "minihack>=0.1.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "docker>=7.0.0",
    "pyyaml>=6.0",
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
nethack-agent = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests (require API key, slow)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
